--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: testing on GH pages jekyll-algolia example
-email: your-email@example.com
+title: Denis demo
+email: your-email@boom/cpù
 description: >- # this means to ignore newlines until "baseurl:"
   Boom!
 baseurl: "/denis" # the subpath of your site, e.g. /blog
